--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "autoload" : {
     "psr-4" : {
-      "CaioMarcatti12\\Env\\" :  "src/"
+      "CaioMarcatti12\\CacheManager\\\\" :  "src/"
     }
   },
   "minimum-stability": "dev",
