--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "caiomarcatti12/cache",
   "description": "",
+  "version": "2.0.0",
   "type": "library",
   "license": "MIT",
   "authors": [
@@ -14,11 +15,12 @@
       "CaioMarcatti12\\CacheManager\\" :  "src/"
     }
   },
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
+  "prefer-stable": true,
   "require": {
-    "caiomarcatti12/core": "dev-master",
-    "caiomarcatti12/env": "dev-master",
-    "caiomarcatti12/data": "dev-master",
-    "predis/predis": "v1.1.x-dev"
+    "caiomarcatti12/core": "2.0.0",
+    "caiomarcatti12/env": "2.0.0",
+    "caiomarcatti12/data": "2.0.0",
+    "predis/predis": ">=v0.8.7"
   }
 }
