--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "caiomarcatti12/cache",
   "description": "",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "type": "library",
   "license": "MIT",
   "authors": [
@@ -18,9 +18,9 @@
   "minimum-stability": "stable",
   "prefer-stable": true,
   "require": {
-    "caiomarcatti12/core": "2.0.0",
-    "caiomarcatti12/env": "2.0.0",
-    "caiomarcatti12/data": "2.0.0",
+    "caiomarcatti12/core": "~2.0.0",
+    "caiomarcatti12/env": "~2.0.0",
+    "caiomarcatti12/data": "~2.0.0",
     "predis/predis": ">=v0.8.7"
   }
 }
